// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should allow the icon to change 1`] = `
<div
  id="root1"
  style="--ng-icon__size: 1em;"
>
  <svg
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    style="stroke-width:var(--ng-icon__stroke-width, 2)"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
    />
    <line
      x1="12"
      x2="12"
      y1="9"
      y2="13"
    />
    <line
      x1="12"
      x2="12.01"
      y1="17"
      y2="17"
    />
  </svg>
</div>
`;

exports[`Icon should allow the icon to change by passing in a svg 1`] = `
<div
  id="root2"
  style="--ng-icon__size: 1em;"
>
  <svg
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    style="stroke-width:var(--ng-icon__stroke-width, 2)"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
    />
    <line
      x1="12"
      x2="12"
      y1="9"
      y2="13"
    />
    <line
      x1="12"
      x2="12.01"
      y1="17"
      y2="17"
    />
  </svg>
</div>
`;

exports[`Icon should insert the expected template 1`] = `
<div
  id="root0"
  style="--ng-icon__size: 1em;"
>
  <svg
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    style="stroke-width:var(--ng-icon__stroke-width, 2)"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
</div>
`;

exports[`Icon should not remove additional child elements 1`] = `"<div id=\\"root0\\" ng-version=\\"18.1.0\\" style=\\"--ng-icon__size: 1em;\\"><span>1</span><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" style=\\"stroke-width:var(--ng-icon__stroke-width, 2)\\"><path d=\\"M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z\\"></path><line x1=\\"12\\" y1=\\"9\\" x2=\\"12\\" y2=\\"13\\"></line><line x1=\\"12\\" y1=\\"17\\" x2=\\"12.01\\" y2=\\"17\\"></line></svg></div>"`;

exports[`Standalone icon component should display the icon 1`] = `"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" style=\\"stroke-width:var(--ng-icon__stroke-width, 2)\\"><circle cx=\\"12\\" cy=\\"12\\" r=\\"10\\"></circle><line x1=\\"12\\" y1=\\"8\\" x2=\\"12\\" y2=\\"12\\"></line><line x1=\\"12\\" y1=\\"16\\" x2=\\"12.01\\" y2=\\"16\\"></line></svg>"`;
